--- a/src/Components/Music/MusicAlbums.module.css
+++ b/src/Components/Music/MusicAlbums.module.css
@@ -25,7 +25,7 @@
     margin-bottom: 10px;
 } */
 
-.image-container
+.imageContainer
 {
     height: 250px;
     width: 250px;
@@ -43,7 +43,7 @@
     filter: brightness(100%);
 }
 
-.music-content.prod-details
+.musicContentProdDetails
 {
     display: flex;
     margin: 8px;
@@ -51,6 +51,14 @@
     justify-content: space-between;
 }
 
-.image-container :hover{
+.imageContainer :hover{
     transform: scale(2);
+}
+
+.addButton
+{
+    margin-left: 108px;
+    color: rgb(5, 5, 5);
+   height: 30px;
+    border-color: aliceblue;
 }
