--- a/src/Components/UI/Modal.css
+++ b/src/Components/UI/Modal.css
@@ -3,7 +3,7 @@
     display:block;
     position: fixed;
     top: 50px;
-    height: 95%;
+    height: 85%;
     right:0;
     background-color: antiquewhite;
     border: 1px solid burlywood;
@@ -11,4 +11,5 @@
     max-width: 900px;
     padding:20px 30px;
     z-index: 99;
+    overflow-y: auto;
 }
