--- a/src/Components/Music/AvailableMusicAlbums.css
+++ b/src/Components/Music/AvailableMusicAlbums.css
@@ -34,3 +34,17 @@
 
 }
 
+
+.music h2{
+    font-family: "Metal Mania";
+    text-align: center;
+    padding: 20px;
+    font-size: 30px;
+}
+
+.container{
+    max-width: 900px;
+    margin: 0px 417px;
+    padding: 39px 28px;
+    padding-left: 84px;
+}
