--- a/src/Components/Layout/Header.module.css
+++ b/src/Components/Layout/Header.module.css
@@ -49,3 +49,9 @@ width:100%
     text-decoration: none;
     margin: 100px;
   }
+
+  /* .active{
+    color: #95bcf0;
+    padding-bottom: 0.25rem;
+    border-bottom: 4px solid #95bcf0;
+  } */
