--- a/src/Components/Layout/Header.module.css
+++ b/src/Components/Layout/Header.module.css
@@ -55,3 +55,14 @@ width:100%
     padding-bottom: 0.25rem;
     border-bottom: 4px solid #95bcf0;
   } */
+
+  .logoutButton
+  {
+    background-color: black;
+    color: white;
+    border: 2px solid blue;
+    padding: 5px;
+    border-radius: 11px;
+    margin-left: 35px;
+
+  }
