--- a/src/Components/pages/Auth/AuthForm.module.css
+++ b/src/Components/pages/Auth/AuthForm.module.css
@@ -10,6 +10,7 @@
     max-width: 40rem;
     margin-block: 10%;
     border: 2px solid blue;
+    background-color: rgb(108, 243, 96);
 }
 
 
@@ -19,7 +20,7 @@
     width:85%
 }
 
-.buttonSub{
+.button{
     border-radius: 4px;
     background-color: #5ca1e1;
     border: none;
@@ -32,16 +33,17 @@
     cursor: pointer;
     margin: 36px;
     box-shadow: 0 10px 20px -8px rgba(0, 0, 0,.7);
+  
 }
 
-.buttonSub{
+.button{
     cursor: pointer;
     display: inline-block;
     position: relative;
     transition: 0.5s;
   }
   
-  .buttonSub:after {
+  .button:after {
     content: '»';
     position: absolute;
     opacity: 0;  
@@ -50,12 +52,19 @@
     transition: 0.5s;
   }
   
-  .buttonSub:hover{
+  .button:hover{
     padding-right: 24px;
     padding-left:8px;
   }
   
-  .buttonSub:hover:after {
+  .button:hover:after {
     opacity: 1;
     right: 10px;
+  }
+
+  .toggleButton{
+    background-color: transparent;
+    border-color: transparent;
+    margin-bottom: 25px;
+    font-size: 25px;
   }
